--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore directories for building the code.
-[Bb]uild/*
-[Bb]uild-*/*
+**/[Bb]uild/*
+**/[Bb]uild-*/*
 # Build directories of tools.
 */*/[Bb]uild/*
 */*/[Bb]uild-*/*
@@ -58,3 +58,4 @@ src/*/*/version.f90
 spec/.2DOF_targetIotaAndVolume_000_000000.sp.DF
 spec/2DOF_targetIotaAndVolume_000_000000.sp.h5
 spec/2DOF_targetIotaAndVolume_000_000000.sp.end
+f90wrap_example/build/CMakeFiles/cmake.check_cache
