--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ spec/.2DOF_targetIotaAndVolume_000_000000.sp.DF
 spec/2DOF_targetIotaAndVolume_000_000000.sp.h5
 spec/2DOF_targetIotaAndVolume_000_000000.sp.end
 f90wrap_example/build/CMakeFiles/cmake.check_cache
+**/tests/output
