--- a/mars_golden_record/Makefile
+++ b/mars_golden_record/Makefile
@@ -1,15 +1,16 @@
 MARS_SCRIPTS = $(CODE)/external/MARS/RZplot
 
-all: run
+all: run RUN/CHEASE/chease_namelist
 
 run: main.m MacConvBoozerCustom.m
 	matlab -nodisplay -batch main
 
 
-MacConvBoozerCustom.m: Makefile
+MacConvBoozerCustom.m:
 	sed -e "s|SDIR = '/cscratch/liuy/WorkReKink/';|% &|g" \
 		-e "s|Mac.Norm   = 2.4229e-3;  % normalization factor|% &|g" \
 		$(MARS_SCRIPTS)/MacConvBoozer.m > MacConvBoozerCustom.m
+
 
 clean:
 	rm -f MacConvBoozerCustom.m  \
