CHEASE in MARS now

--- a/mars_golden_record/RUN/MARS/.gitignore
+++ b/mars_golden_record/RUN/MARS/.gitignore
@@ -1,1 +1,22 @@
-*.IN
+datain
+EQU01
+EQU02
+EQU03
+ETAVAC
+EXPEQ
+EXPEQ.OUT
+INP1
+INP1_FORMATTED
+JACOB_F
+JSOLVER
+NDES
+NGA
+NOUT
+NSAVE
+NUPLO
+OUTRMAR
+OUTVMAR
+PROFDEN.IN
+RMZM_F.OUT
+RUN.IN
+RZPEEL
