--- a/mars_golden_record/RUN/MARS/.gitignore
+++ b/mars_golden_record/RUN/MARS/.gitignore
@@ -1,14 +1,43 @@
+B123U2.OUT
+B123U.OUT
+B1UP.OUT
+B1US00.OUT
+B1US0.OUT
+B2U.OUT
+B3U.OUT
+BFEEDF.OUT
+BNORM01.OUT
+BPLASMA_MARSF.OUT
+BPLASMA.OUT
+CFEED.OUT
+CURRSENS.OUT
 datain
+DPLASMA.OUT
+EFAF.OUT
+ENERGY.OUT
+EPLASMA.OUT
 EQU01
 EQU02
 EQU03
 ETAVAC
 EXPEQ
 EXPEQ.OUT
+FEEDI.OUT
+FIELD_RE.OUT
+FLUX.OUT
 INP1
 INP1_FORMATTED
+J2UWF.OUT
+J3UMAX.OUT
+J3UWF.OUT
 JACOB_F
+JACOBIAN.OUT
+JFD.OUT
+JPLASMA.OUT
+JPS.OUT
+JRW.OUT
 JSOLVER
+METRICS.OUT
 NDES
 NGA
 NOUT
@@ -16,7 +45,15 @@ NSAVE
 NUPLO
 OUTRMAR
 OUTVMAR
+PPLASMA.OUT
 PROFDEN.IN
+PROFEQ.OUT
+PROFNUSTAR.OUT
+RESULT.OUT
 RMZM_F.OUT
 RUN.IN
 RZPEEL
+SENSNOISE.OUT
+SHELLRESULT.OUT
+VPLASMA.OUT
+XPLASMA.OUT
