--- a/dispatch/C/Makefile
+++ b/dispatch/C/Makefile
@@ -3,7 +3,7 @@ CXX = g++-14
 CFLAGS = -O3 -march=native
 CXXFLAGS = -O3 -march=native -std=c++14
 
-all: dispatch_switch.x dispatch_pointer.x dispatch_class.x
+all: dispatch_switch.x dispatch_pointer.x dispatch_class.x dispatch_none.x
 
 dispatch_pointer.x: dispatch_pointer.c
 	$(CC) $(CFLAGS) -o dispatch_pointer.x dispatch_pointer.c
@@ -14,6 +14,9 @@ dispatch_switch.x: dispatch_switch.c
 dispatch_class.x: dispatch_class.cpp
 	$(CXX) $(CXXFLAGS) -o dispatch_class.x dispatch_class.cpp
 
+dispatch_none.x: dispatch_none.c
+	$(CC) $(CFLAGS) -o dispatch_none.x dispatch_none.c
+
 
 clean:
-	rm -f dispatch_switch.x dispatch_pointer.x dispatch_class.x
+	rm -f *.x
