--- a/dispatch/with_data/C/Makefile
+++ b/dispatch/with_data/C/Makefile
@@ -1,7 +1,7 @@
-CC = gcc-14
-CXX = g++-14
-CFLAGS = -O3 -march=native
-CXXFLAGS = -O3 -march=native -std=c++14
+CC ?= gcc-14
+CXX ?= g++-14
+CFLAGS ?= -O3 -march=native
+CXXFLAGS ?= -O3 -march=native -std=c++14
 
 all: dispatch_switch.x dispatch_pointer.x dispatch_class.x
 
@@ -13,7 +13,6 @@ dispatch_switch.x: dispatch_switch.c
 
 dispatch_class.x: dispatch_class.cpp
 	$(CXX) $(CXXFLAGS) -o dispatch_class.x dispatch_class.cpp
-
 
 clean:
 	rm -f *.x
