--- a/dispatch/without_data/C/Makefile
+++ b/dispatch/without_data/C/Makefile
@@ -1,7 +1,7 @@
-CC = gcc-14
-CXX = g++-14
-CFLAGS = -O3 -march=native
-CXXFLAGS = -O3 -march=native -std=c++14
+CC ?= gcc-14
+CXX ?= g++-14
+CFLAGS ?= -O3 -march=native
+CXXFLAGS ?= -O3 -march=native -std=c++14
 
 all: dispatch_switch.x dispatch_none.x
 
