--- a/neort_golden_record/Makefile
+++ b/neort_golden_record/Makefile
@@ -1,8 +1,14 @@
-all: CODE/NEO-RT
+all: CODE/NEO-RT/build/neo_rt.x
+
+CODE/NEO-RT/build/neo_rt.x: CODE/NEO-RT
+	cd CODE/NEO-RT && make
 
 CODE/NEO-RT:
 	if [ ! -d CODE/NEO-RT ]; then \
 		git clone https://github.com/itpplasma/NEO-RT CODE/NEO-RT; \
-	else \
-		cd CODE/NEO-RT && git pull; \
 	fi
+
+clean:
+	make -C CODE/NEO-RT clean
+
+.PHONY: all clean
