build golden records

--- a/neort_golden_record/CODE/Makefile
+++ b/neort_golden_record/CODE/Makefile
@@ -1,4 +1,4 @@
-all: NEO-RT
+all: NEO-RT NEO-RT.old
 
 NEO-RT:
 	if [ ! -d NEO-RT ]; then \
@@ -6,7 +6,14 @@ NEO-RT:
 	fi
 	make -C NEO-RT
 
+NEO-RT.old: NEO-RT
+	if [ ! -d NEO-RT.old ]; then \
+		mkdir -p NEO-RT.old; \
+	fi
+	ORIGIN="../NEO-RT" make -C NEO-RT.old
+
 clean:
 	make -C NEO-RT clean
+	make -C NEO-RT.old clean
 
-.PHONY: all clean NEO-RT
+.PHONY: all clean NEO-RT NEO-RT.old
