--- a/neort_golden_record/Makefile
+++ b/neort_golden_record/Makefile
@@ -6,10 +6,14 @@ CODE:
 DATA:
 	make -C DATA
 
+RUN:
+	make -C RUN
+
 clean:
 	make -C CODE clean
 
 distclean: clean
 	make -C DATA clean
+	make -C RUN clean
 
-.PHONY: all clean distclean CODE DATA
+.PHONY: all clean distclean CODE DATA RUN
