New options from 2017

--- a/neort_golden_record/RUN/.gitignore
+++ b/neort_golden_record/RUN/.gitignore
@@ -2,3 +2,7 @@
 2016-01-28_n1_nomag
 2016-03-11_n1_noshear
 2016-03-11_n1_shear
+170118_n1_nonlin
+170118_n1_noshear_nonlin
+170118_n1_noshear_ql
+170118_n1_ql
