--- a/neort_golden_record/RUN/n1_ql_torque/driftorbit.in.template
+++ b/neort_golden_record/RUN/n1_ql_torque/driftorbit.in.template
@@ -21,7 +21,7 @@
     bfac = 1.0
     efac = 1.0
     inp_swi = 9
-    runmode = "transport"
+    runmode = "torque"
     orbit_mode_avg = 0
     orbit_mode_transp = 0
     vsteps = 256
