--- a/neort_golden_record/TESTS/Makefile
+++ b/neort_golden_record/TESTS/Makefile
@@ -7,7 +7,7 @@ all: compare_flux_surface_area.x
 compare_flux_surface_area.x: compare_flux_surface_area.f90
 	$(FC) $(FFLAGS) -o $@ \
 		$(NEORT_PATH)/build/OBJS/_deps/spline-src/spline.f90 \
-		$(NEORT_PATH)/SRC/common.f90 \
+		$(NEORT_PATH)/SRC/util.f90 \
 		$(NEORT_PATH)/SRC/do_magfie_standalone.f90 \
 		-lblas -llapack $<
 
