--- a/dispatch/without_data/Fortran/Makefile
+++ b/dispatch/without_data/Fortran/Makefile
@@ -3,8 +3,8 @@ FFLAGS ?= -O3 -march=native
 
 all: dispatch_switch.x
 
-dispatch_switch.x: dispatch_switch.f90 dispatch_switch_module.f90
-	$(FC) $(FFLAGS) -o dispatch_switch.x dispatch_switch_module.f90 dispatch_switch.f90
+dispatch_switch.x: dispatch_switch.f90
+	$(FC) $(FFLAGS) -o dispatch_switch.x dispatch_switch.f90
 
 clean:
 	rm -f *.x *.o
