Add Go dispatch implementations and performance analysis
- Implement Go dispatch_class (virtual/interface dispatch) for with_data
- Implement Go dispatch_switch (switch-based dispatch) for without_data
- Add assembly output targets to C/Rust/Go Makefiles for analysis
- Add comprehensive PERFORMANCE_ANALYSIS.md documenting findings

Key findings:
- Python/Numba was testing different pattern (1 dispatch vs 1B dispatches)
- C++/Rust/Go have identical virtual dispatch performance (~3.5s/1B calls)
- C# JIT achieves same speed through devirtualization
- Virtual dispatch overhead: ~3.5ns per call on Apple Silicon
- Switch statements not automatically faster than virtual dispatch

--- a/dispatch/with_data/C/Makefile
+++ b/dispatch/with_data/C/Makefile
@@ -14,5 +14,16 @@ dispatch_switch.x: dispatch_switch.c
 dispatch_class.x: dispatch_class.cpp
 	$(CXX) $(CXXFLAGS) -o dispatch_class.x dispatch_class.cpp
 
+asm: dispatch_switch.s dispatch_pointer.s dispatch_class.s
+
+dispatch_pointer.s: dispatch_pointer.c
+	$(CC) $(CFLAGS) -S -fverbose-asm -o dispatch_pointer.s dispatch_pointer.c
+
+dispatch_switch.s: dispatch_switch.c
+	$(CC) $(CFLAGS) -S -fverbose-asm -o dispatch_switch.s dispatch_switch.c
+
+dispatch_class.s: dispatch_class.cpp
+	$(CXX) $(CXXFLAGS) -S -fverbose-asm -o dispatch_class.s dispatch_class.cpp
+
 clean:
-	rm -f *.x
+	rm -f *.x *.s
