--- a/dispatch/without_data/C/Makefile
+++ b/dispatch/without_data/C/Makefile
@@ -11,5 +11,13 @@ dispatch_switch.x: dispatch_switch.c
 dispatch_none.x: dispatch_none.c
 	$(CC) $(CFLAGS) -o dispatch_none.x dispatch_none.c
 
+asm: dispatch_switch.s dispatch_none.s
+
+dispatch_switch.s: dispatch_switch.c
+	$(CC) $(CFLAGS) -S -fverbose-asm -o dispatch_switch.s dispatch_switch.c
+
+dispatch_none.s: dispatch_none.c
+	$(CC) $(CFLAGS) -S -fverbose-asm -o dispatch_none.s dispatch_none.c
+
 clean:
-	rm -f *.x
+	rm -f *.x *.s
