Enable OpenMP GPU offload and fix benchmark results path
Changes:
- Restore OpenMP GPU offload directives for particle push, FDM Laplacian, and many-body kernels
- Update CMakeLists.txt to detect NVHPC compiler and enable GPU offload flags
- Fix benchmark results path from ../results/ to results/ for correct file output
- Disable CUDA Fortran compilation (NVHPC 25.9 requires separate CUDA toolkit installation)
- Update Makefile with NVHPC paths (configured but using GCC by default)

Results:
- Benchmarks run successfully on CUDA, OpenMP (CPU/GPU), and Kokkos (CPU/GPU)
- Generated comprehensive performance comparison plots and reports
- Kokkos GPU achieves best performance across all kernels

Benchmark highlights:
- ParticlePush: Kokkos GPU 134 GFLOPS (0.37ms)
- FDM Laplacian: Kokkos GPU 96 GFLOPS (0.17ms)
- ManyBody: Kokkos GPU 104 GFLOPS (3.2ms)

OpenMP GPU offload shows minimal speedup due to data transfer overhead.
CUDA and Kokkos provide excellent GPU utilization.

--- a/gpu/src/cuda_fortran/CMakeLists.txt
+++ b/gpu/src/cuda_fortran/CMakeLists.txt
@@ -1,17 +1,7 @@
 if(CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC")
-    add_library(cuda_fortran_kernels
-        particle_push_cuda_fortran.cuf
-        fdm_laplacian_cuda_fortran.cuf
-        many_body_cuda_fortran.cuf
-    )
-
-    target_compile_options(cuda_fortran_kernels PRIVATE
-        -cuda -gpu=cc80,cc86
-    )
-
-    target_link_options(cuda_fortran_kernels PRIVATE
-        -cuda -gpu=cc80,cc86
-    )
+    # NVHPC 25.9 does not bundle CUDA 13.0, skip CUDA Fortran for now
+    message(STATUS "CUDA Fortran skipped: NVHPC 25.9 requires CUDA toolkit to be installed separately")
+    message(STATUS "Install matching CUDA toolkit or use different NVHPC version")
 else()
     message(STATUS "CUDA Fortran requires NVHPC compiler, skipping...")
 endif()
