Fix GPU benchmark timing and Fortran column-major indexing
- Add warmup iteration to all CUDA benchmarks to eliminate cold-start timing errors
- Fix Fortran FDM Laplacian kernel to use proper column-major array indexing
- Prepare NVHPC/CUDA integration (currently blocked by CUDA 13/NVHPC 25.9 incompatibility)
- Update CMake to support external CUDA toolkit path for NVHPC compilers

Benchmark results now show correct relative performance between CUDA and Kokkos.

--- a/gpu/CMakeLists.txt
+++ b/gpu/CMakeLists.txt
@@ -35,12 +35,18 @@ set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O3 -march=native -Wall")
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 --use_fast_math")
 
 # OpenMP offload flags
-# Note: GCC on this system is not configured with NVIDIA offload support
-# GPU offloading with OpenMP requires either NVHPC or GCC with offload enabled
+# Note: NVHPC requires CUDA runtime to be available
 if(CMAKE_CXX_COMPILER_ID MATCHES "NVHPC|PGI")
-    set(OPENMP_OFFLOAD_FLAGS "-mp=gpu" "-gpu=cc80,cc86")
+    if(DEFINED ENV{CUDA_HOME})
+        set(CUDA_PATH $ENV{CUDA_HOME})
+    elseif(DEFINED CUDAToolkit_ROOT)
+        set(CUDA_PATH ${CUDAToolkit_ROOT})
+    else()
+        set(CUDA_PATH "/opt/cuda")
+    endif()
+    set(OPENMP_OFFLOAD_FLAGS "-mp=gpu" "-gpu=cc80,cc86" "-cuda" "-L${CUDA_PATH}/lib64" "-lcudart")
     set(OPENMP_GPU_ENABLED TRUE)
-    message(STATUS "OpenMP GPU offload enabled with NVHPC")
+    message(STATUS "OpenMP GPU offload enabled with NVHPC using CUDA at ${CUDA_PATH}")
 else()
     set(OPENMP_OFFLOAD_FLAGS "")
     set(OPENMP_GPU_ENABLED FALSE)
@@ -48,7 +54,14 @@ else()
 endif()
 
 if(CMAKE_Fortran_COMPILER_ID MATCHES "NVHPC|PGI")
-    set(OPENMP_FORTRAN_OFFLOAD_FLAGS "-mp=gpu" "-gpu=cc80,cc86" "-cuda")
+    if(DEFINED ENV{CUDA_HOME})
+        set(CUDA_PATH $ENV{CUDA_HOME})
+    elseif(DEFINED CUDAToolkit_ROOT)
+        set(CUDA_PATH ${CUDAToolkit_ROOT})
+    else()
+        set(CUDA_PATH "/opt/cuda")
+    endif()
+    set(OPENMP_FORTRAN_OFFLOAD_FLAGS "-mp=gpu" "-gpu=cc80,cc86" "-cuda" "-L${CUDA_PATH}/lib64" "-lcudart")
 else()
     set(OPENMP_FORTRAN_OFFLOAD_FLAGS "")
 endif()
