--- a/gpu/Makefile
+++ b/gpu/Makefile
@@ -18,10 +18,18 @@ help:
 	@echo "  help        - Show this help message"
 
 build:
-	cmake -S . -B $(BUILD_DIR) -G Ninja \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_CUDA_ARCHITECTURES="80;86"
-	cmake --build $(BUILD_DIR) -j
+	env PATH=$(NVHPC_ROOT)/bin:/opt/cuda/bin:$$PATH \
+		CUDA_HOME=$(CUDA_ROOT) \
+		cmake -S . -B $(BUILD_DIR) -G Ninja \
+			-DCMAKE_C_COMPILER=$(NVHPC_ROOT)/bin/nvc \
+			-DCMAKE_CXX_COMPILER=$(NVHPC_ROOT)/bin/nvc++ \
+			-DCMAKE_Fortran_COMPILER=$(NVHPC_ROOT)/bin/nvfortran \
+			-DCMAKE_CUDA_COMPILER=/opt/cuda/bin/nvcc \
+			-DCMAKE_BUILD_TYPE=Release \
+			-DCMAKE_CUDA_ARCHITECTURES="80;86"
+	env PATH=$(NVHPC_ROOT)/bin:/opt/cuda/bin:$$PATH \
+		CUDA_HOME=$(CUDA_ROOT) \
+		cmake --build $(BUILD_DIR) -j
 
 benchmark: build
 	@mkdir -p results
