--- a/gpu/src/cuda_fortran/CMakeLists.txt
+++ b/gpu/src/cuda_fortran/CMakeLists.txt
@@ -1,2 +1,7 @@
-# CUDA Fortran disabled - NVHPC 25.9 requires localrc for external CUDA 13.0
-message(STATUS "CUDA Fortran disabled (NVHPC requires localrc for external CUDA)")
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -cuda -gpu=cc80,cc86")
+
+add_library(cuda_fortran_kernels STATIC
+    particle_push_cuda_fortran.cuf
+    fdm_laplacian_cuda_fortran.cuf
+    many_body_cuda_fortran.cuf
+)
