--- a/gpu/src/kokkos/CMakeLists.txt
+++ b/gpu/src/kokkos/CMakeLists.txt
@@ -4,6 +4,11 @@ add_library(kokkos_kernels
     many_body_kokkos.cpp
 )
 
+set_target_properties(kokkos_kernels PROPERTIES
+    CUDA_SEPARABLE_COMPILATION OFF
+    CUDA_RESOLVE_DEVICE_SYMBOLS OFF
+)
+
 target_include_directories(kokkos_kernels PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/../../include
 )
